day-76/kubernetes-basics/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: day76-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: day76-nginx
  template:
    metadata:
      labels:
        app: day76-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
