day-76/kubernetes-basics/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: day76-nginx-pod
  labels:
    app: day76-nginx
spec:
  containers:
    - name: nginx
      image: nginx:alpine
      ports:
        - containerPort: 80
