day-76/kubernetes-basics/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: day76-nginx-service
spec:
  selector:
    app: day76-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
